adding images and updating the readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,3 +41,7 @@ export(total.peak.area)
 export(tree_and_independent_features)
 export(variable.by.factor)
 export(ztransform)
+importFrom(stats,na.omit)
+importFrom(stats,sd)
+importFrom(stats,shapiro.test)
+importFrom(stats,var)
