adding two new functions find.cont.effect.sizes.2.sim.R and find.PA.effect.sizes.2.sim.R and modifying the manner in which the two power plot functions work with these two new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(feature.missingness.by.path.method)
 export(feature.outliers)
 export(feature.sum.stats)
 export(feature.tree.independence)
+export(find.PA.effect.sizes.2.sim)
+export(find.cont.effect.sizes.2.sim)
 export(greedy.pairwise.n.filter)
 export(id.outliers)
 export(make.cor.matrix)
