update to namespace and description with new generate_report function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(feature.sum.stats)
 export(feature.tree.independence)
 export(find.PA.effect.sizes.2.sim)
 export(find.cont.effect.sizes.2.sim)
+export(generate_report)
 export(greedy.pairwise.n.filter)
 export(id.outliers)
 export(make.cor.matrix)
@@ -43,7 +44,4 @@ export(total.peak.area)
 export(tree_and_independent_features)
 export(variable.by.factor)
 export(ztransform)
-importFrom(stats,na.omit)
-importFrom(stats,sd)
-importFrom(stats,shapiro.test)
-importFrom(stats,var)
+importFrom(knitr,knit2html)
