updating the feature describe function to include an estimate of missingness

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,3 +46,4 @@ export(tree_and_independent_features)
 export(variable.by.factor)
 export(ztransform)
 importFrom(knitr,knit2html)
+importFrom(psych,describe)
