adding the function feature_plots.R to the package and adding its functionality to the parameter file and pipeline script.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(feature.missingness.by.path.method)
 export(feature.outliers)
 export(feature.sum.stats)
 export(feature.tree.independence)
+export(feature_plots)
 export(find.PA.effect.sizes.2.sim)
 export(find.cont.effect.sizes.2.sim)
 export(generate_report)
@@ -45,5 +46,16 @@ export(total.peak.area)
 export(tree_and_independent_features)
 export(variable.by.factor)
 export(ztransform)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,theme_bw)
+importFrom(ggpubr,ggarrange)
+importFrom(ggpubr,ggexport)
+importFrom(ggpubr,ggtexttable)
 importFrom(knitr,knit2html)
+importFrom(maggistr,"%>%")
 importFrom(psych,describe)
