adding examples to functions and correcting check() NOTES

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,38 +1,39 @@
 Package: metaboprep
 Title: Metabolomics data preparation and processing pipeline
-Version: 1.0
+Version: 1.0.1
 Authors@R: c(person("Laura", "Corbin", email = "laura.corbin@bristol.ac.uk", role = c("aut")), 
     person("David", "Hughes", email = "hughes.evoanth@gmail.com", role = c("aut", "cre")) )
 Description: Reads in raw Metabolon and Nightingale xls sheets and aids in data preparation of all metabolomics data sets.
 Depends: R (>= 3.5.0)
-License: CC0
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports:
     car,
-    corrplot,
-    data.table,
     dplyr,
-    dendextend,
-    forcats,
-    ggfortify,
     ggplot2,
     ggpubr,
-    gridExtra,
-    kableExtra,
     knitr,
-    MASS,
+    magrittr,
     nFactors,
     pcaMethods,
     psych,
-    purrr,
     pwr,
     RColorBrewer,
     readr,
     readxl,
+    tibble
+Suggests:
+    corrplot,
+    data.table,
+    dendextend,
+    forcats,
+    ggfortify,
+    gridExtra,
+    kableExtra,
+    MASS,
+    purrr,
     stats,
     stringr,
-    tibble,
-    tidyr,
-    tidyverse
+    tidyr
