--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(eval.power.binary.imbalanced)
 export(eval.power.cont)
 export(feature.describe)
 export(feature.missingness)
-export(feature.missingness.by.path.method)
 export(feature.outliers)
 export(feature.sum.stats)
 export(feature.tree.independence)
@@ -34,28 +33,72 @@ export(read.in.nightingale)
 export(rntransform)
 export(run.cont.power.make.plot)
 export(run.pa.imbalanced.power.make.plot)
-export(run.power.make.plot)
 export(sam.missingness.exclusion)
-export(sample.mis.multivariate.anova)
 export(sample.missingness)
-export(sample.missingness.by.batch)
 export(sample.outliers)
 export(sample.sum.stats)
-export(sample.tpa.summary)
 export(total.peak.area)
 export(tree_and_independent_features)
 export(variable.by.factor)
-export(ztransform)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(car,Anova)
+importFrom(dplyr,arrange)
+importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_linetype_manual)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,ggexport)
 importFrom(ggpubr,ggtexttable)
+importFrom(ggpubr,ttheme)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,abline)
+importFrom(graphics,hist)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,text)
 importFrom(knitr,knit2html)
-importFrom(maggistr,"%>%")
+importFrom(magrittr,"%>%")
+importFrom(nFactors,nScree)
+importFrom(nFactors,parallel)
+importFrom(pcaMethods,ppca)
 importFrom(psych,describe)
+importFrom(pwr,pwr.f2.test)
+importFrom(pwr,pwr.t2n.test)
+importFrom(stats,anova)
+importFrom(stats,as.dist)
+importFrom(stats,cor)
+importFrom(stats,cor.test)
+importFrom(stats,cutree)
+importFrom(stats,density)
+importFrom(stats,fisher.test)
+importFrom(stats,hclust)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stats,prcomp)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,shapiro.test)
+importFrom(stats,var)
+importFrom(tibble,as_tibble)
+importFrom(utils,write.table)
