--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,26 @@ export(feature_summary)
 export(missingness)
 export(outlier_detection)
 export(outliers)
+export(pc_and_outliers)
+export(quality_control)
 export(sample_summary)
+export(summarise)
 export(total_peak_area)
+export(tree_and_independent_features)
 import(S7)
+import(cli)
+importFrom(glue,glue)
+importFrom(nFactors,nScree)
+importFrom(nFactors,parallel)
+importFrom(pcaMethods,ppca)
 importFrom(psych,describe)
+importFrom(stats,as.dist)
+importFrom(stats,cor)
+importFrom(stats,cutree)
+importFrom(stats,hclust)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,prcomp)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
