--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,16 +20,24 @@ URL: https://mrcieu.github.io/metaboprep/
 Collate: 
     'class_metaboprep.R'
     'batch_normalise.R'
+    'continous_power_plot.R'
+    'cramer_v.R'
     'feature_describe.R'
     'feature_summary.R'
+    'generate_report.R'
+    'imbalanced_power_plot.R'
     'missingness.R'
+    'multivariate_anova.R'
     'outlier_detection.R'
     'pc_and_outliers.R'
     'quality_control.R'
+    'read_metabolon_v1.R'
     'sample_summary.R'
     'summarise.R'
     'total_peak_area.R'
     'tree_and_independent_features.R'
+    'utils.R'
+    'variable_by_factor.R'
     'zzz.R'
 Suggests: 
     knitr,
