--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,29 +2,59 @@
 
 export(Metaboprep)
 export(add_layer)
+export(available_data_formats)
+export(available_report_templates)
 export(batch_normalise)
+export(clean_names)
+export(continuous_power_plot)
+export(cramerV)
+export(eval.power.binary.imbalanced)
+export(eval.power.cont)
 export(feature_describe)
 export(feature_summary)
+export(find.PA.effect.sizes.2.sim)
+export(find.cont.effect.sizes.2.sim)
+export(generate_report)
+export(imbalanced_power_plot)
 export(missingness)
+export(multivariate_anova)
 export(outlier_detection)
 export(outliers)
 export(pc_and_outliers)
 export(quality_control)
+export(read_metabolon_v1)
 export(sample_summary)
 export(summarise)
 export(total_peak_area)
 export(tree_and_independent_features)
+export(variable_by_factor)
 import(S7)
 import(cli)
+import(ggplot2)
+importFrom(boot,boot)
+importFrom(boot,boot.ci)
+importFrom(car,Anova)
+importFrom(data.table,as.data.table)
+importFrom(data.table,setnames)
+importFrom(ggpubr,ggtexttable)
+importFrom(ggpubr,ttheme)
 importFrom(glue,glue)
 importFrom(nFactors,nScree)
 importFrom(nFactors,parallel)
 importFrom(pcaMethods,ppca)
 importFrom(psych,describe)
+importFrom(pwr,pwr.f2.test)
+importFrom(pwr,pwr.t2n.test)
+importFrom(readxl,excel_sheets)
+importFrom(readxl,read_xlsx)
+importFrom(rmarkdown,render)
+importFrom(stats,anova)
 importFrom(stats,as.dist)
+importFrom(stats,chisq.test)
 importFrom(stats,cor)
 importFrom(stats,cutree)
 importFrom(stats,hclust)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,prcomp)
