passing CRAN checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,6 @@ import(ggplot2)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(car,Anova)
-importFrom(data.table,as.data.table)
-importFrom(data.table,setnames)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
 importFrom(glue,glue)
@@ -48,6 +46,7 @@ importFrom(pwr,pwr.t2n.test)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(rmarkdown,render)
+importFrom(stats,aggregate)
 importFrom(stats,anova)
 importFrom(stats,as.dist)
 importFrom(stats,chisq.test)
