--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,24 @@ Authors@R: c(person("Laura", "Corbin", email = "laura.corbin@bristol.ac.uk", rol
              person("Alec", "McKinlay", email = "am17168@bristol.ac.uk", role = c("aut")))
 Description: |
   Reads in raw Metabolon and Nightingale xls sheets and aids in data preparation of all metabolomics data sets.
-Depends: R (>= 3.5.0)
+Depends: R (>= 4.1.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Imports:
+    boot,
+    car,
+    cli,
+    ggplot2,
+    ggpubr,
+    glue,
+    nFactors,
+    pcaMethods,
     psych,
+    pwr,
+    readxl,
+    rmarkdown,
     S7
 URL: https://mrcieu.github.io/metaboprep/
 Collate: 
@@ -41,5 +52,5 @@ Collate:
     'zzz.R'
 Suggests: 
     knitr,
-    rmarkdown
+    MASS
 VignetteBuilder: knitr
