--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,11 @@ Imports:
     reshape2,
     rmarkdown,
     S7
+Suggests: 
+    knitr,
+    MASS
+Remotes:
+    hredestig/pcaMethods
 URL: https://mrcieu.github.io/metaboprep/
 Collate: 
     'class_metaboprep.R'
@@ -53,7 +58,4 @@ Collate:
     'utils.R'
     'variable_by_factor.R'
     'zzz.R'
-Suggests: 
-    knitr,
-    MASS
 VignetteBuilder: knitr
