--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(continuous_power_plot)
 export(cramerV)
 export(eval.power.binary.imbalanced)
 export(eval.power.cont)
+export(export_data)
 export(feature_describe)
 export(feature_summary)
 export(find.PA.effect.sizes.2.sim)
@@ -61,3 +62,4 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
+importFrom(yaml,write_yaml)
