--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(outliers)
 export(pc_and_outliers)
 export(quality_control)
 export(read_metabolon_v1)
+export(read_olink_v1)
 export(sample_summary)
 export(summarise)
 export(total_peak_area)
@@ -32,12 +33,17 @@ export(variable_by_factor)
 import(S7)
 import(cli)
 import(ggplot2)
+importFrom(OlinkAnalyze,read_NPX)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(car,Anova)
+importFrom(dplyr,filter)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
 importFrom(glue,glue)
+importFrom(magrittr,"%>%")
 importFrom(nFactors,nScree)
 importFrom(nFactors,parallel)
 importFrom(pcaMethods,ppca)
@@ -62,4 +68,6 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
+importFrom(tibble,column_to_rownames)
+importFrom(tidyr,pivot_wider)
 importFrom(yaml,write_yaml)
