export metaboprep function and vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,10 @@ export(continuous_power_plot)
 export(cramerV)
 export(eval.power.binary.imbalanced)
 export(eval.power.cont)
-export(export_data)
+export(export)
+export(export_comets)
+export(export_metaboanalyst)
+export(export_metaboprep)
 export(feature_describe)
 export(feature_summary)
 export(find.PA.effect.sizes.2.sim)
