--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,9 @@ Collate:
     'pc_and_outliers.R'
     'quality_control.R'
     'read_metabolon_v1.R'
+    'read_nightingale_v1.R'
     'read_olink.R'
+    'read_somalogic.R'
     'sample_summary.R'
     'summarise.R'
     'total_peak_area.R'
