--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,9 @@ export(outliers)
 export(pc_and_outliers)
 export(quality_control)
 export(read_metabolon_v1)
+export(read_nightingale_v1)
 export(read_olink_v1)
+export(read_somalogic)
 export(sample_summary)
 export(summarise)
 export(total_peak_area)
@@ -73,4 +75,5 @@ importFrom(stats,shapiro.test)
 importFrom(stats,var)
 importFrom(tibble,column_to_rownames)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,zip)
 importFrom(yaml,write_yaml)
