--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,15 +39,13 @@ import(S7)
 import(cli)
 import(ggplot2)
 importFrom(OlinkAnalyze,read_NPX)
+importFrom(SomaDataIO,is.soma_adat)
+importFrom(SomaDataIO,read_adat)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(car,Anova)
-importFrom(dplyr,filter)
-importFrom(dplyr,rename)
-importFrom(dplyr,select)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
-importFrom(magrittr,"%>%")
 importFrom(nFactors,nScree)
 importFrom(nFactors,parallel)
 importFrom(pcaMethods,ppca)
@@ -56,6 +54,7 @@ importFrom(pwr,pwr.f2.test)
 importFrom(pwr,pwr.t2n.test)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
+importFrom(reshape2,dcast)
 importFrom(rmarkdown,render)
 importFrom(stats,aggregate)
 importFrom(stats,anova)
@@ -72,7 +71,5 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
-importFrom(tibble,column_to_rownames)
-importFrom(tidyr,pivot_wider)
 importFrom(utils,zip)
 importFrom(yaml,write_yaml)
