nightingale and metabolon read functions and vignettes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,8 +53,8 @@ Collate:
     'outlier_detection.R'
     'pc_and_outliers.R'
     'quality_control.R'
-    'read_metabolon_v1.R'
-    'read_nightingale_v1.R'
+    'read_metabolon.R'
+    'read_nightingale.R'
     'read_olink.R'
     'read_somalogic.R'
     'sample_summary.R'
