--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,8 @@ export(outlier_detection)
 export(outliers)
 export(pc_and_outliers)
 export(quality_control)
-export(read_metabolon_v1)
-export(read_nightingale_v1)
+export(read_metabolon)
+export(read_nightingale)
 export(read_olink_v1)
 export(read_somalogic)
 export(sample_summary)
@@ -71,5 +71,4 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
-importFrom(utils,zip)
 importFrom(yaml,write_yaml)
