comits export function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,9 @@ importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
 importFrom(nFactors,nScree)
 importFrom(nFactors,parallel)
+importFrom(openxlsx,addWorksheet)
+importFrom(openxlsx,saveWorkbook)
+importFrom(openxlsx,writeData)
 importFrom(pcaMethods,ppca)
 importFrom(psych,describe)
 importFrom(pwr,pwr.f2.test)
