--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     yaml,
     OlinkAnalyze,
     SomaDataIO,
-    reshape2
+    reshape2,
+    openxlsx
 Suggests: 
     knitr,
     dendextend,
