--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(read_metabolon)
 export(read_nightingale)
 export(read_olink_v1)
 export(read_somalogic)
+export(run_metaboprep1)
 export(sample_summary)
 export(summarise)
 export(total_peak_area)
