--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ import(S7)
 import(cli)
 import(ggplot2)
 importFrom(OlinkAnalyze,read_NPX)
+importFrom(S7,S7_inherits)
+importFrom(S7,method)
 importFrom(SomaDataIO,is.soma_adat)
 importFrom(SomaDataIO,read_adat)
 importFrom(boot,boot)
