--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,4 +77,6 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
+importFrom(stringr,str_to_sentence)
+importFrom(stringr,str_wrap)
 importFrom(yaml,write_yaml)
