--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,12 @@ Imports:
     SomaDataIO,
     reshape2,
     openxlsx,
-    stringr
+    stringr,
+    shiny,
+    shinycssloaders,
+    bslib,
+    DT,
+    plotly
 Suggests: 
     knitr,
     dendextend,
@@ -62,6 +67,7 @@ Collate:
     'read_somalogic.R'
     'run_metaboprep1.R'
     'sample_summary.R'
+    'shiny_app.R'
     'summarise.R'
     'summary_metaboprep.R'
     'total_peak_area.R'
