--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(read_olink_v1)
 export(read_somalogic)
 export(run_metaboprep1)
 export(sample_summary)
+export(shiny_app)
 export(summarise)
 export(total_peak_area)
 export(tree_and_independent_features)
@@ -39,6 +40,7 @@ export(variable_by_factor)
 import(S7)
 import(cli)
 import(ggplot2)
+importFrom(DT,DTOutput)
 importFrom(OlinkAnalyze,read_NPX)
 importFrom(S7,S7_inherits)
 importFrom(S7,method)
@@ -46,6 +48,7 @@ importFrom(SomaDataIO,is.soma_adat)
 importFrom(SomaDataIO,read_adat)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
+importFrom(bslib,bs_theme)
 importFrom(car,Anova)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
@@ -55,13 +58,29 @@ importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,saveWorkbook)
 importFrom(openxlsx,writeData)
 importFrom(pcaMethods,ppca)
+importFrom(plotly,event_data)
+importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
 importFrom(psych,describe)
 importFrom(pwr,pwr.f2.test)
 importFrom(pwr,pwr.t2n.test)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(reshape2,dcast)
+importFrom(reshape2,melt)
 importFrom(rmarkdown,render)
+importFrom(shiny,navbarPage)
+importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
+importFrom(shiny,renderPlot)
+importFrom(shiny,selectizeInput)
+importFrom(shiny,sidebarLayout)
+importFrom(shiny,sidebarPanel)
+importFrom(shiny,tabPanel)
+importFrom(shiny,updateSelectizeInput)
+importFrom(shinycssloaders,withSpinner)
 importFrom(stats,aggregate)
 importFrom(stats,anova)
 importFrom(stats,as.dist)
