--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ export(pc_and_outliers)
 export(quality_control)
 export(read_metabolon)
 export(read_nightingale)
-export(read_olink_v1)
+export(read_olink)
 export(read_somalogic)
 export(run_metaboprep1)
 export(sample_summary)
