--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,11 +71,14 @@ importFrom(readxl,read_xlsx)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rmarkdown,render)
+importFrom(shiny,h3)
+importFrom(shiny,mainPanel)
 importFrom(shiny,navbarPage)
 importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
 importFrom(shiny,renderPlot)
 importFrom(shiny,selectizeInput)
+importFrom(shiny,shinyApp)
 importFrom(shiny,sidebarLayout)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,tabPanel)
