--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(readxl,read_xlsx)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rmarkdown,render)
+importFrom(shiny,mainPanel)
 importFrom(shiny,navbarPage)
 importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
